--- a/4_Copy1_2D_Adversarial_Attacks_on_Computer_Vision.ipynb
+++ b/4_Copy1_2D_Adversarial_Attacks_on_Computer_Vision.ipynb
@@ -6,9 +6,9 @@
     "colab": {
       "name": "4-Copy1.2D - Adversarial Attacks on Computer Vision.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -29,6 +29,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/akritikts/Adversarial-Attacks-on-Computer-Vision/blob/master/4_Copy1_2D_Adversarial_Attacks_on_Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -593,9 +603,15 @@
         "colab": {}
       },
       "source": [
-        "f = open('clean_image.list', 'r+')\n",
-        "labels = [line.rstrip(\"\\n\") for line in f.readlines()]\n",
-        "f.close()"
+        "#f = open('clean_image.list', 'rb')\n",
+        "with open('clean_image.list', encoding=\"utf8\", errors='ignore') as f:\n",
+        "  labels = [line.rstrip(\"\\n\") for line in f.readlines()]\n",
+        "f.close()\n",
+        "for i,x in enumerate(labels):\n",
+        "    if ' ' in x:\n",
+        "        labels[i] = x[:x.index(' ')]\n",
+        "labels\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -616,15 +632,20 @@
         "  for fn in uploaded.keys():\n",
         "    if fn in label:\n",
         "      im = Image.open(BytesIO(uploaded[fn]))\n",
-        "      img = preprocess(im)\n",
-        "      \n",
-        "      #image_probs = pretrained_model\n",
-        "      #tp = get_imagenet_label(image_probs[0])\n",
-        "      #image_probs = sess.run([pretrained_model], {input_image_placeholder:img})\n",
-        "      adv_x = img + (0.01*perturbations)\n",
+        "      input_image = preprocess(im)\n",
+        "      reversed_image = reverse_preprocess(input_image)  \n",
+        "      preprocessed_img, reversed_img = sess.run([input_image, reversed_image])\n",
+        "      image_probs = sess.run([pretrained_model], {input_image_placeholder:preprocessed_img})\n",
+        "      tp = get_imagenet_label(image_probs[0])\n",
+        "      print(\"True label: \", tp[0][1])\n",
+        "      true.append(tp[0][1])\n",
+        "      adv_x = input_image + (0.01*perturbations)\n",
         "      adv_x = tf.clip_by_value(adv_x, -1, 1)\n",
-        "      pred.append(display_images(adv_x, label))\n",
-        "      "
+        "      p = display_images(adv_x, label+' Epsilon = 0.01')\n",
+        "      print(\"Predicted label: \", p, \"\\n\")\n",
+        "      pred.append(p)\n",
+        "accuracy = len([true[i] for i in range(0, len(true)) if true[i] == pred[i]]) / len(true)\n",
+        "print(\"Rate of adversarial attack: \", accuracy)"
       ],
       "execution_count": null,
       "outputs": []
@@ -637,7 +658,31 @@
         "colab": {}
       },
       "source": [
-        ""
+        "\n",
+        "    \n",
+        "\n",
+        "pred = []\n",
+        "true = []\n",
+        "for label in labels:  \n",
+        "  image_raw = tf.io.read_file(label)\n",
+        "  print(\"image name: \", label)\n",
+        "  image = tf.image.decode_png(image_raw)\n",
+        "  input_image = preprocess(image)\n",
+        "  reversed_image = reverse_preprocess(input_image)\n",
+        "  preprocessed_img, reversed_img = sess.run([input_image, reversed_image])\n",
+        "  image_probs = sess.run([pretrained_model], {input_image_placeholder:preprocessed_img})\n",
+        "  \n",
+        "  tp = get_imagenet_label(image_probs[0])\n",
+        "  print(\"True label: \", tp[0][1])\n",
+        "  true.append(tp[0][1])\n",
+        "  adv_x = input_image + (0.01*perturbations)\n",
+        "  adv_x = tf.clip_by_value(adv_x, -1, 1)\n",
+        "  p = display_images(adv_x, label)\n",
+        "  print(\"Predicted label: \", p, \"\\n\")\n",
+        "  pred.append(p)\n",
+        "\n",
+        "accuracy = len([true[i] for i in range(0, len(true)) if true[i] == pred[i]]) / len(true)\n",
+        "print(\"Rate of adversarial attack: \", accuracy)"
       ],
       "execution_count": null,
       "outputs": []
